# Artificial_Intelligence_in_Information_Systems_course_AGH

./: .gitignore  README.md  pyproject.toml  requirements.txt
Lab0/: Lab0.ipynb
Lab_1/: lab1.ipynb
Lab_4/: lab4.ipynb
src/sisi/Lab_2/: lab2.ipynb
src/sisi/Lab_3/: lab3.ipynb
src/sisi/Lab_5/: lab5.ipynb
src/sisi/Lab_6/: lab6.ipynb
