[tool.poetry]
name = "artificial-intelligence-in-information-systems-course-agh"
version = "0.1.0"
description = ""
authors = ["Szymon Budziak"]
readme = "README.md"
packages = [{ include = "sisi", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"
fogml = "^0.0.7"
shap = "^0.45.0"
lightgbm = "^4.3.0"
ipywidgets = "^8.1.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
